[tool.poetry]
name = "patterns"
version = "0.1.0"
description = "python design patterns"
authors = ["pelkoa-glitch <hvngmvnvibe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
